[package]
name = "ibm_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
typetag = "0.1.8"

[dev-dependencies.cargo-husky]
version="1.5.0"
default-features=false
features= ["prepush-hook", "run-for-all", "run-cargo-test", "run-cargo-clippy"]